Bug fixed in AGateway to throw TimeOutException